Attach command almost working

--- a/conf/router1.conf
+++ b/conf/router1.conf
@@ -1,1 +1,3 @@
-socs.network.router.ip="192.168.1.1"
+socs.network.router.ip="127.0.0.1"
+socs.network.router.port=80800
+socs.network.router.simulatedIp = "192.168.0.1"
